# auto-bond-purchase

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: auto-run.yml  docker-build.yml
autobond/: config.py  notifier.py  purchaser.py  runner.py
captcha/: __init__.py  image_process.py  label_process.py  model_utils.py  recognizer.py
models/: VGG.keras
